k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-contstrat-delivery
  namespace: dev
  labels:
    app: svc-contstrat-delivery
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svc-contstrat-delivery
  template:
    metadata:
      labels:
        app: svc-contstrat-delivery
    spec:
      containers:
        - name: svc-contstrat-delivery
          image: asia-southeast1-docker.pkg.dev/be8-ecms-test/ecms-ar-gcp/svc-contstrat-delivery:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8082
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
