k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-contstrat-delivery
  namespace: dev
spec:
  selector:
    app: svc-contstrat-delivery
  ports:
    - name: http
      port: 8082
      targetPort: 8082
  type: ClusterIP
