k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-contstrat-delivery
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ecms-svc-contstrat-delivery.be8-customdev.com
      secretName: svc-contstrat-delivery-tls
  rules:
    - host: ecms-svc-contstrat-delivery.be8-customdev.com
      http:
        paths:
          - path: /api/content-strategy
            pathType: Prefix
            backend:
              service:
                name: svc-contstrat-delivery
                port:
                  number: 8082
          - path: /healthz
            pathType: Prefix
            backend:
              service:
                name: svc-contstrat-delivery
                port:
                  number: 8082
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: svc-contstrat-delivery
                port:
                  number: 8082
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: svc-contstrat-delivery
                port:
                  number: 8082
